webbion-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webbion-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webbion.tailnet.ts.net 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webbion-service
            port:
              number: 80
